# technical-test-data-engineer

./: .gitignore  pyproject.toml
conf/base/: catalog.yml
docs/: ANSWERS.md
src/moovitamix_data_connector/: data_models.py  main.py  moovitamix_api_connector.py  utils.py
src/moovitamix_fastapi/: generate_fake_data.py  main.py
test/: test_moovitamix_api_connector.py
